--- a/package.json
+++ b/package.json
@@ -1,32 +1,31 @@
 {
-    "name": "fruits",
-    "version": "1.0.0",
-    "description": "First layout scss challenge",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/PanKarton/Challenge1-fruits.git"
-    },
-    "author": "PanKarton",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/PanKarton/Challenge1-fruits/issues"
-    },
-    "homepage": "https://github.com/PanKarton/Challenge1-fruits#readme",
-    "devDependencies": {
-        "css-loader": "^6.5.1",
-        "handlebars": "^4.7.7",
-        "html-webpack-plugin": "^5.5.0",
-        "mini-css-extract-plugin": "^2.4.5",
-        "sass": "^1.45.2",
-        "sass-loader": "^12.4.0",
-        "style-loader": "^3.3.1",
-        "url-loader": "^4.1.1",
-        "webpack": "^5.65.0",
-        "webpack-cli": "^4.9.1",
-        "webpack-dev-server": "^4.7.2"
-    }
+  "name": "layoutchallenges",
+  "version": "1.0.0",
+  "description": "This repo contains multiple copying layout challenges to train html/css(scss)/js",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/PanKarton/CopyLayoutChallenges.git"
+  },
+  "author": "PanKarton",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/PanKarton/CopyLayoutChallenges/issues"
+  },
+  "homepage": "https://github.com/PanKarton/CopyLayoutChallenges#readme",
+  "devDependencies": {
+    "css-loader": "^6.5.1",
+    "html-loader": "^3.1.0",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.4.6",
+    "sass": "^1.47.0",
+    "sass-loader": "^12.4.0",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.7.2"
+  }
 }
