--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/PanKarton/CopyLayoutChallenges#readme",
   "devDependencies": {
+    "@babel/core": "^7.17.2",
+    "@babel/eslint-parser": "^7.17.0",
     "css-loader": "^6.6.0",
     "eslint": "^8.8.0",
     "eslint-config-airbnb-base": "^15.0.0",
